criando bombas e dinamica de detonação

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Campo Minado</h1>
     <div id="field">
-        <!-- <div class="zone"></div> -->
+        <!-- <div class="0"></div> -->
         
  
     </div>
